--- a/EmotiBit_data_visualizer.ipynb
+++ b/EmotiBit_data_visualizer.ipynb
@@ -217,15 +217,22 @@
     "    if not all_events:\n",
     "        return None\n",
     "\n",
+    "    # Determine the start and end of the music session\n",
     "    for event in all_events:\n",
-    "        # A song start is now a non-empty cell\n",
-    "        if event['song']:\n",
+    "        # First non-empty song marks the start\n",
+    "        if event['song'] and first_song_start_time is None:\n",
     "            first_song_start_time = event['time']\n",
     "            print(f\"  - Music session starts at: {first_song_start_time.strftime('%H:%M:%S')}\")\n",
-    "            break\n",
+    "        \n",
+    "        # \"Music end\" in the observation column marks the end\n",
+    "        if 'music end' in event['obs'].lower():\n",
+    "            final_end_time = event['time']\n",
+    "            print(f\"  - Music session ends at: {final_end_time.strftime('%H:%M:%S')}\")\n",
+    "            break # Stop searching once found\n",
     "\n",
-    "    final_end_time = all_events[-1]['time']\n",
-    "    print(f\"  - Music session ends at: {final_end_time.strftime('%H:%M:%S')}\")\n",
+    "    if final_end_time is None:\n",
+    "        final_end_time = all_events[-1]['time']\n",
+    "        print(f\"  - Music session ends at: {final_end_time.strftime('%H:%M:%S')}\")\n",
     "\n",
     "    for event in all_events:\n",
     "        # Build the annotation text, now including the score\n",
@@ -364,7 +371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
