Update output format

--- a/EmotiBit_data_visualizer.ipynb
+++ b/EmotiBit_data_visualizer.ipynb
@@ -63,11 +63,11 @@
     "# --- User Configuration --- #\n",
     "\n",
     "# 1. Set the path to the specific data folder you want to process.\n",
-    "DATA_FOLDER_PATH = '../PwD dataset/July 29 Afternoon AN 000133' # <-- CHANGE THIS FOLDER\n",
+    "DATA_FOLDER_PATH = '../PwD dataset/July 22 Morning ER 000439' # <-- CHANGE THIS FOLDER\n",
     "\n",
     "# 2. Define paths for the schedule and output plots relative to the data folder.\n",
     "MUSIC_SCHEDULE_PATH = glob.glob(os.path.join(DATA_FOLDER_PATH, '* Combined Observations.csv'))[0]\n",
-    "OUTPUT_FOLDER = os.path.join(DATA_FOLDER_PATH, 'plots')\n",
+    "OUTPUT_FOLDER = DATA_FOLDER_PATH + ' Plots'\n",
     "\n",
     "# 3. Channels to plot and their descriptions.\n",
     "CHANNELS = {\n",
@@ -224,8 +224,11 @@
     "            first_song_start_time = event['time']\n",
     "            print(f\"  - Music session starts at: {first_song_start_time.strftime('%H:%M:%S')}\")\n",
     "        \n",
-    "        # \"Music end\" in the observation column marks the end\n",
-    "        if 'music end' in event['obs'].lower():\n",
+    "        # Define all possible \"end\" phrases in a tuple\n",
+    "        end_phrases = ('music end', 'music off', 'music stop')\n",
+    "\n",
+    "        # Marks the end\n",
+    "        if any(phrase in event['obs'].lower() for phrase in end_phrases):\n",
     "            final_end_time = event['time']\n",
     "            print(f\"  - Music session ends at: {final_end_time.strftime('%H:%M:%S')}\")\n",
     "            break # Stop searching once found\n",
@@ -353,20 +356,6 @@
     "        plot_and_save_signal(signal, df, schedule_data, CHANNELS, OUTPUT_FOLDER)\n",
     "    print(\"\\n--- All plots have been generated and saved --- \")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
