--- a/Emotibit_analysis_hrv.ipynb
+++ b/Emotibit_analysis_hrv.ipynb
@@ -178,6 +178,7 @@
     "STEP_SECONDS = 60         # 60 seconds = 1 minute step\n",
     "\n",
     "# --- HRV Analysis Execution --- #\n",
+    "PPG_SIGNAL_TO_USE = 'PI'\n",
     "print(f\"\\n--- Starting HRV Analysis for signal '{PPG_SIGNAL_TO_USE}' ---\")\n",
     "\n",
     "# 1. Get the selected PPG signal DataFrame\n",
